# StratergyVault

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  main.py  (+3 more)
source_repos/AgentQuant/: .env.example  DESIGN.md  README.md  config.json  config.yaml  new_env.ini  pyproject.toml  quick_test.py  requirements.txt  run_app.py  test_gemini_connection.py
source_repos/AgentQuant/docs/: EXPERIMENTAL_DETAILS.md  INSTALLATION.md  PAPER_DRAFT.md
source_repos/AgentQuant/experiments/: ablation_results.csv  ablation_study.py  random_baseline.py  random_baseline_results.csv  rigorous_baselines.py  static_baseline.py  static_baseline_results.csv  walk_forward.py  walk_forward_context.py  walk_forward_context_results.csv  walk_forward_context_with_costs.py  walk_forward_results.csv
source_repos/AgentQuant/notebooks/: demo_agent_run.ipynb
source_repos/AgentQuant/src/agent/: langchain_planner.py  langchain_planner_new.py  planner.py  policy.py  runner.py  simple_planner.py
source_repos/AgentQuant/src/app/: streamlit_app.py
source_repos/AgentQuant/src/backtest/: metrics.py  runner.py  simple_backtest.py
source_repos/AgentQuant/src/data/: ingest.py  schemas.py
source_repos/AgentQuant/src/features/: engine.py  regime.py
source_repos/AgentQuant/src/strategies/: momentum.py  multi_strategy.py  strategy_registry.py
source_repos/AgentQuant/src/utils/: backtest_utils.py  config.py  logging.py
source_repos/AgentQuant/src/visualization/: plots.py
source_repos/AgentQuant/tests/: test_backtest.py  test_features.py
(+100 files in other folders)
